--- a/buildspec-demo.yml
+++ b/buildspec-demo.yml
@@ -8,7 +8,6 @@ env:
   secret-manager:
     DOCKER_USERNAME: arn:aws:secretsmanager:ap-southeast-1:340752821097:secret:nicely/codebuild-demo-9SPwfN:username
     DOCKER_PASSWORD: arn:aws:secretsmanager:ap-southeast-1:340752821097:secret:nicely/codebuild-demo-9SPwfN:token
-
   
 phases:
   install:
@@ -33,7 +32,7 @@ phases:
         # - env 
         - echo $DOCKER_USERNAME
         - echo $DOCKER_PASSWORD
-        - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+        - aws ecr get-login-password --region ap-southeast-1 | docker login --username $DOCKER_USERNAME --password-stdin $DOCKER_PASSWORD
         - env
   build:
     commands:
