--- a/buildspec-demo.yml
+++ b/buildspec-demo.yml
@@ -32,6 +32,7 @@ phases:
         # - env 
         - echo $DOCKER_USERNAME
         - echo $DOCKER_PASSWORD
+        - docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD
         # - aws ecr get-login-password --region ap-southeast-1 | docker login --username $DOCKER_USERNAME --password-stdin $DOCKER_PASSWORD
 
   build:
