--- a/buildspec-demo.yml
+++ b/buildspec-demo.yml
@@ -8,6 +8,7 @@ env:
   secrets-manager:
     DOCKER_USERNAME: arn:aws:secretsmanager:ap-southeast-1:340752821097:secret:nicely/codebuild-demo-9SPwfN:username
     DOCKER_PASSWORD: arn:aws:secretsmanager:ap-southeast-1:340752821097:secret:nicely/codebuild-demo-9SPwfN:token
+    ECR_URL: arn:aws:secretsmanager:ap-southeast-1:340752821097:secret:nicely/codebuild-demo-9SPwfN:ecr-url
   
 phases:
   install:
@@ -15,63 +16,23 @@ phases:
       - echo "Install Phase - Nothing to do using latest Amazon Linux Docker Image for CodeBuild which has all AWS Tools - https://github.com/aws/aws-codebuild-docker-images/blob/master/al2/x86_64/standard/3.0/Dockerfile"
   pre_build:
       commands:
-        # Docker Image Tag with Date Time & Code Buiild Resolved Source Version
-        # - TAG="$(date +%Y-%m-%d.%H.%M.%S).$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
-        # Update Image tag in our Kubernetes Deployment Manifest        
-        # - echo "Update Image tag in kube-manifest..."
-        # - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' kube-manifests/deployment.yml
-        # Verify AWS CLI Version        
-        # - echo "Verify AWS CLI Version..."
-        # - aws --version
-        # Login to ECR Registry for docker to push the image to ECR Repository
-        # - echo "Login in to Amazon ECR..."
-        # - $(aws ecr get-login --no-include-email)
-        # Update Kube config Home Directory
-        # - export KUBECONFIG=$HOME/.kube/config
-        # - echo "show env"
-        # - env 
+        - echo "Building the Docker image..."
         - echo $DOCKER_USERNAME
         - echo $DOCKER_PASSWORD
         - docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD
         - TAG="$(git describe --tags --abbrev=0)"
+        - echo "Show env variables"
         - env
-
   build:
     commands:
-      # Build Docker Image
       - echo "Building the Docker image..."
       - docker build --tag $APP_NAME:$TAG .
   post_build:
     commands:
-      # Push Docker Image to ECR Repository
-      # - echo "Build completed on `date`"
-      # - echo "Pushing the Docker image to ECR Repository"
-      # - docker push $REPOSITORY_URI:$TAG
-      # - echo "Docker Image Push to ECR Completed -  $REPOSITORY_URI:$TAG"    
-      # Extracting AWS Credential Information using STS Assume Role for kubectl
-      # - echo "Setting Environment Variables related to AWS CLI for Kube Config Setup"          
-      # - CREDENTIALS=$(aws sts assume-role --role-arn $EKS_KUBECTL_ROLE_ARN --role-session-name codebuild-kubectl --duration-seconds 900)
-      # - export AWS_ACCESS_KEY_ID="$(echo ${CREDENTIALS} | jq -r '.Credentials.AccessKeyId')"
-      # - export AWS_SECRET_ACCESS_KEY="$(echo ${CREDENTIALS} | jq -r '.Credentials.SecretAccessKey')"
-      # - export AWS_SESSION_TOKEN="$(echo ${CREDENTIALS} | jq -r '.Credentials.SessionToken')"
-      # - export AWS_EXPIRATION=$(echo ${CREDENTIALS} | jq -r '.Credentials.Expiration')
-      # - env
-      # Setup kubectl with our EKS Cluster              
-      # - echo "Update Kube Config"      
-      # - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME
-      # Apply changes to our Application using kubectl
-      # - echo "Apply changes to kube manifests"            
-      # - kubectl apply -f kube-manifests/
-      # - echo "Completed applying changes to Kubernetes Objects"           
-      # Create Artifacts which we can use if we want to continue our pipeline for other stages
-      # - printf '[{"name":"deployment.yml","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
-      # Additional Commands to view your credentials      
-      #- echo "Credentials Value is..  ${CREDENTIALS}"      
-      #- echo "AWS_ACCESS_KEY_ID...  ${AWS_ACCESS_KEY_ID}"            
-      #- echo "AWS_SECRET_ACCESS_KEY...  ${AWS_SECRET_ACCESS_KEY}"            
-      #- echo "AWS_SESSION_TOKEN...  ${AWS_SESSION_TOKEN}"            
-      #- echo "AWS_EXPIRATION...  $AWS_EXPIRATION"             
-      #- echo "EKS_CLUSTER_NAME...  $EKS_CLUSTER_NAME"             
+      - echo "Pushing the Docker image to ECR Repository"   
+      - aws ecr get-login-password --region ap-southeast-1 | docker login --username AWS --password-stdin $ECR_URL     
+      - docker tag $APP_NAME:$TAG $ECR_URL/$APP_NAME:$TAG 
+      - docker push $ECR_URL/$APP_NAME:$TAG
 # artifacts:
 #   files: 
 #     - build.json   
