--- a/buildspec-demo.yml
+++ b/buildspec-demo.yml
@@ -31,8 +31,8 @@ phases:
     commands:
       - echo "Pushing the Docker image to ECR Repository"   
       - aws ecr get-login-password --region ap-southeast-1 | docker login --username AWS --password-stdin $ECR_URL     
-      - docker tag $APP_NAME:$TAG $ECR_URL/$APP_NAME:$TAG 
-      - docker push $ECR_URL/$APP_NAME:$TAG
+      - docker tag $APP_NAME:$TAG $ECR_URL/codebuild-demo:$TAG 
+      - docker push $ECR_URL/codebuild-demo:$TAG 
 # artifacts:
 #   files: 
 #     - build.json   
